# ee4-hpce-2014-cw2

./: CMakeLists.txt  makefile
audio/: all_firs_direct.sh  all_firs_staged.sh  audio_sink.sh  corrupter.sh  fir_better.c  fir_filter.c  lazy_fir.sh  lazy_print_audio.sh  lazy_signal_generator.sh  makefile  merge.c  mp3_file_src.sh  mp3_sink.sh  mp3_url_src.sh  new_fir.c  passthrough.c  print_audio.c  signal_generator.c  time_passthrough.sh
audio/coeffs/: flat.csv
