cmake_minimum_required(VERSION 2.8.4)
project(hpce_2014_cw2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    audio/fir_better.c
    audio/fir_filter.c
    audio/merge.c
    audio/new_fir.c
    audio/passthrough.c
    audio/print_audio.c
    audio/signal_generator.c
    build/lame-3.99.5/ACM/ADbg/ADbg.cpp
    build/lame-3.99.5/ACM/ADbg/ADbg.h
    build/lame-3.99.5/ACM/ddk/msacmdrv.h
    build/lame-3.99.5/ACM/tinyxml/tinyxml.cpp
    build/lame-3.99.5/ACM/tinyxml/tinyxml.h
    build/lame-3.99.5/ACM/tinyxml/tinyxmlerror.cpp
    build/lame-3.99.5/ACM/tinyxml/tinyxmlparser.cpp
    build/lame-3.99.5/ACM/tinyxml/xmltest.cpp
    build/lame-3.99.5/ACM/ACM.cpp
    build/lame-3.99.5/ACM/ACM.h
    build/lame-3.99.5/ACM/ACMStream.cpp
    build/lame-3.99.5/ACM/ACMStream.h
    build/lame-3.99.5/ACM/adebug.h
    build/lame-3.99.5/ACM/AEncodeProperties.cpp
    build/lame-3.99.5/ACM/AEncodeProperties.h
    build/lame-3.99.5/ACM/DecodeStream.cpp
    build/lame-3.99.5/ACM/DecodeStream.h
    build/lame-3.99.5/ACM/main.cpp
    build/lame-3.99.5/ACM/resource.h
    build/lame-3.99.5/Dll/BladeMP3EncDLL.c
    build/lame-3.99.5/Dll/BladeMP3EncDLL.h
    build/lame-3.99.5/Dll/Example.cpp
    build/lame-3.99.5/dshow/aboutprp.cpp
    build/lame-3.99.5/dshow/aboutprp.h
    build/lame-3.99.5/dshow/Encoder.cpp
    build/lame-3.99.5/dshow/Encoder.h
    build/lame-3.99.5/dshow/iaudioprops.h
    build/lame-3.99.5/dshow/Mpegac.cpp
    build/lame-3.99.5/dshow/Mpegac.h
    build/lame-3.99.5/dshow/PropPage.cpp
    build/lame-3.99.5/dshow/PropPage.h
    build/lame-3.99.5/dshow/PropPage_adv.cpp
    build/lame-3.99.5/dshow/PropPage_adv.h
    build/lame-3.99.5/dshow/REG.CPP
    build/lame-3.99.5/dshow/REG.H
    build/lame-3.99.5/dshow/resource.h
    build/lame-3.99.5/dshow/UIDS.H
    build/lame-3.99.5/frontend/amiga_mpega.c
    build/lame-3.99.5/frontend/brhist.c
    build/lame-3.99.5/frontend/brhist.h
    build/lame-3.99.5/frontend/console.c
    build/lame-3.99.5/frontend/console.h
    build/lame-3.99.5/frontend/get_audio.c
    build/lame-3.99.5/frontend/get_audio.h
    build/lame-3.99.5/frontend/gpkplotting.c
    build/lame-3.99.5/frontend/gpkplotting.h
    build/lame-3.99.5/frontend/gtkanal.c
    build/lame-3.99.5/frontend/gtkanal.h
    build/lame-3.99.5/frontend/lame_main.c
    build/lame-3.99.5/frontend/lametime.c
    build/lame-3.99.5/frontend/lametime.h
    build/lame-3.99.5/frontend/main.c
    build/lame-3.99.5/frontend/main.h
    build/lame-3.99.5/frontend/mp3rtp.c
    build/lame-3.99.5/frontend/mp3x.c
    build/lame-3.99.5/frontend/parse.c
    build/lame-3.99.5/frontend/parse.h
    build/lame-3.99.5/frontend/rtp.c
    build/lame-3.99.5/frontend/rtp.h
    build/lame-3.99.5/frontend/timestatus.c
    build/lame-3.99.5/frontend/timestatus.h
    build/lame-3.99.5/include/lame.h
    build/lame-3.99.5/libmp3lame/i386/nasm.h
    build/lame-3.99.5/libmp3lame/vector/lame_intrin.h
    build/lame-3.99.5/libmp3lame/vector/xmm_quantize_sub.c
    build/lame-3.99.5/libmp3lame/bitstream.c
    build/lame-3.99.5/libmp3lame/bitstream.h
    build/lame-3.99.5/libmp3lame/encoder.c
    build/lame-3.99.5/libmp3lame/encoder.h
    build/lame-3.99.5/libmp3lame/fft.c
    build/lame-3.99.5/libmp3lame/fft.h
    build/lame-3.99.5/libmp3lame/gain_analysis.c
    build/lame-3.99.5/libmp3lame/gain_analysis.h
    build/lame-3.99.5/libmp3lame/id3tag.c
    build/lame-3.99.5/libmp3lame/id3tag.h
    build/lame-3.99.5/libmp3lame/l3side.h
    build/lame-3.99.5/libmp3lame/lame-analysis.h
    build/lame-3.99.5/libmp3lame/lame.c
    build/lame-3.99.5/libmp3lame/lame_global_flags.h
    build/lame-3.99.5/libmp3lame/lameerror.h
    build/lame-3.99.5/libmp3lame/machine.h
    build/lame-3.99.5/libmp3lame/mpglib_interface.c
    build/lame-3.99.5/libmp3lame/newmdct.c
    build/lame-3.99.5/libmp3lame/newmdct.h
    build/lame-3.99.5/libmp3lame/presets.c
    build/lame-3.99.5/libmp3lame/psymodel.c
    build/lame-3.99.5/libmp3lame/psymodel.h
    build/lame-3.99.5/libmp3lame/quantize.c
    build/lame-3.99.5/libmp3lame/quantize.h
    build/lame-3.99.5/libmp3lame/quantize_pvt.c
    build/lame-3.99.5/libmp3lame/quantize_pvt.h
    build/lame-3.99.5/libmp3lame/reservoir.c
    build/lame-3.99.5/libmp3lame/reservoir.h
    build/lame-3.99.5/libmp3lame/set_get.c
    build/lame-3.99.5/libmp3lame/set_get.h
    build/lame-3.99.5/libmp3lame/tables.c
    build/lame-3.99.5/libmp3lame/tables.h
    build/lame-3.99.5/libmp3lame/takehiro.c
    build/lame-3.99.5/libmp3lame/util.c
    build/lame-3.99.5/libmp3lame/util.h
    build/lame-3.99.5/libmp3lame/vbrquantize.c
    build/lame-3.99.5/libmp3lame/vbrquantize.h
    build/lame-3.99.5/libmp3lame/VbrTag.c
    build/lame-3.99.5/libmp3lame/VbrTag.h
    build/lame-3.99.5/libmp3lame/version.c
    build/lame-3.99.5/libmp3lame/version.h
    build/lame-3.99.5/mac/MacDLLMain.c
    build/lame-3.99.5/mac/Precompile_Common.h
    build/lame-3.99.5/misc/abx.c
    build/lame-3.99.5/misc/ath.c
    build/lame-3.99.5/misc/mlame_corr.c
    build/lame-3.99.5/misc/scalartest.c
    build/lame-3.99.5/mpglib/common.c
    build/lame-3.99.5/mpglib/common.h
    build/lame-3.99.5/mpglib/dct64_i386.c
    build/lame-3.99.5/mpglib/dct64_i386.h
    build/lame-3.99.5/mpglib/decode_i386.c
    build/lame-3.99.5/mpglib/decode_i386.h
    build/lame-3.99.5/mpglib/huffman.h
    build/lame-3.99.5/mpglib/interface.c
    build/lame-3.99.5/mpglib/interface.h
    build/lame-3.99.5/mpglib/l2tables.h
    build/lame-3.99.5/mpglib/layer1.c
    build/lame-3.99.5/mpglib/layer1.h
    build/lame-3.99.5/mpglib/layer2.c
    build/lame-3.99.5/mpglib/layer2.h
    build/lame-3.99.5/mpglib/layer3.c
    build/lame-3.99.5/mpglib/layer3.h
    build/lame-3.99.5/mpglib/mpg123.h
    build/lame-3.99.5/mpglib/mpglib.h
    build/lame-3.99.5/mpglib/tabinit.c
    build/lame-3.99.5/mpglib/tabinit.h
    build/lame-3.99.5/config.h
    build/lame-3.99.5/configMS.h
    build/sox-14.4.1/libgsm/add.c
    build/sox-14.4.1/libgsm/aliases.h
    build/sox-14.4.1/libgsm/code.c
    build/sox-14.4.1/libgsm/decode.c
    build/sox-14.4.1/libgsm/gsm.h
    build/sox-14.4.1/libgsm/gsm_create.c
    build/sox-14.4.1/libgsm/gsm_decode.c
    build/sox-14.4.1/libgsm/gsm_destroy.c
    build/sox-14.4.1/libgsm/gsm_encode.c
    build/sox-14.4.1/libgsm/gsm_option.c
    build/sox-14.4.1/libgsm/long_term.c
    build/sox-14.4.1/libgsm/lpc.c
    build/sox-14.4.1/libgsm/preprocess.c
    build/sox-14.4.1/libgsm/private.h
    build/sox-14.4.1/libgsm/rpe.c
    build/sox-14.4.1/libgsm/short_term.c
    build/sox-14.4.1/libgsm/table.c
    build/sox-14.4.1/lpc10/analys.c
    build/sox-14.4.1/lpc10/bsynz.c
    build/sox-14.4.1/lpc10/chanwr.c
    build/sox-14.4.1/lpc10/dcbias.c
    build/sox-14.4.1/lpc10/decode.c
    build/sox-14.4.1/lpc10/deemp.c
    build/sox-14.4.1/lpc10/difmag.c
    build/sox-14.4.1/lpc10/dyptrk.c
    build/sox-14.4.1/lpc10/encode.c
    build/sox-14.4.1/lpc10/energy.c
    build/sox-14.4.1/lpc10/f2c.h
    build/sox-14.4.1/lpc10/f2clib.c
    build/sox-14.4.1/lpc10/ham84.c
    build/sox-14.4.1/lpc10/hp100.c
    build/sox-14.4.1/lpc10/invert.c
    build/sox-14.4.1/lpc10/irc2pc.c
    build/sox-14.4.1/lpc10/ivfilt.c
    build/sox-14.4.1/lpc10/lpc10.h
    build/sox-14.4.1/lpc10/lpcdec.c
    build/sox-14.4.1/lpc10/lpcenc.c
    build/sox-14.4.1/lpc10/lpcini.c
    build/sox-14.4.1/lpc10/lpfilt.c
    build/sox-14.4.1/lpc10/median.c
    build/sox-14.4.1/lpc10/mload.c
    build/sox-14.4.1/lpc10/onset.c
    build/sox-14.4.1/lpc10/pitsyn.c
    build/sox-14.4.1/lpc10/placea.c
    build/sox-14.4.1/lpc10/placev.c
    build/sox-14.4.1/lpc10/preemp.c
    build/sox-14.4.1/lpc10/prepro.c
    build/sox-14.4.1/lpc10/random.c
    build/sox-14.4.1/lpc10/rcchk.c
    build/sox-14.4.1/lpc10/synths.c
    build/sox-14.4.1/lpc10/tbdm.c
    build/sox-14.4.1/lpc10/voicin.c
    build/sox-14.4.1/lpc10/vparms.c
    build/sox-14.4.1/msvc10/Mad/config.h
    build/sox-14.4.1/msvc10/Mp3Lame/config.h
    build/sox-14.4.1/msvc10/Png/inttypes.h
    build/sox-14.4.1/msvc10/Png/pnglibconf.h
    build/sox-14.4.1/msvc10/SndFile/sys/time.h
    build/sox-14.4.1/msvc10/SndFile/config.h
    build/sox-14.4.1/msvc10/SndFile/inttypes.h
    build/sox-14.4.1/msvc10/SndFile/sndfile.h
    build/sox-14.4.1/msvc10/SoX/soxconfig.h
    build/sox-14.4.1/msvc9/Mad/config.h
    build/sox-14.4.1/msvc9/Mp3Lame/config.h
    build/sox-14.4.1/msvc9/Png/inttypes.h
    build/sox-14.4.1/msvc9/Png/pnglibconf.h
    build/sox-14.4.1/msvc9/SndFile/sys/time.h
    build/sox-14.4.1/msvc9/SndFile/config.h
    build/sox-14.4.1/msvc9/SndFile/inttypes.h
    build/sox-14.4.1/msvc9/SndFile/sndfile.h
    build/sox-14.4.1/msvc9/Sox/soxconfig.h
    build/sox-14.4.1/src/8svx.c
    build/sox-14.4.1/src/adpcm.c
    build/sox-14.4.1/src/adpcm.h
    build/sox-14.4.1/src/adpcms.c
    build/sox-14.4.1/src/adpcms.h
    build/sox-14.4.1/src/aifc-fmt.c
    build/sox-14.4.1/src/aiff-fmt.c
    build/sox-14.4.1/src/aiff.c
    build/sox-14.4.1/src/aiff.h
    build/sox-14.4.1/src/al-fmt.c
    build/sox-14.4.1/src/alsa.c
    build/sox-14.4.1/src/amr-nb.c
    build/sox-14.4.1/src/amr-wb.c
    build/sox-14.4.1/src/amr.h
    build/sox-14.4.1/src/ao.c
    build/sox-14.4.1/src/au.c
    build/sox-14.4.1/src/avr.c
    build/sox-14.4.1/src/band.h
    build/sox-14.4.1/src/bend.c
    build/sox-14.4.1/src/biquad.c
    build/sox-14.4.1/src/biquad.h
    build/sox-14.4.1/src/biquads.c
    build/sox-14.4.1/src/caf.c
    build/sox-14.4.1/src/cdr.c
    build/sox-14.4.1/src/chorus.c
    build/sox-14.4.1/src/compand.c
    build/sox-14.4.1/src/compandt.c
    build/sox-14.4.1/src/compandt.h
    build/sox-14.4.1/src/contrast.c
    build/sox-14.4.1/src/coreaudio.c
    build/sox-14.4.1/src/cvsd-fmt.c
    build/sox-14.4.1/src/cvsd.c
    build/sox-14.4.1/src/cvsd.h
    build/sox-14.4.1/src/cvsdfilt.h
    build/sox-14.4.1/src/dat.c
    build/sox-14.4.1/src/dcshift.c
    build/sox-14.4.1/src/delay.c
    build/sox-14.4.1/src/dft_filter.c
    build/sox-14.4.1/src/dft_filter.h
    build/sox-14.4.1/src/dither.c
    build/sox-14.4.1/src/dither.h
    build/sox-14.4.1/src/divide.c
    build/sox-14.4.1/src/downsample.c
    build/sox-14.4.1/src/dvms-fmt.c
    build/sox-14.4.1/src/earwax.c
    build/sox-14.4.1/src/echo.c
    build/sox-14.4.1/src/echos.c
    build/sox-14.4.1/src/effects.c
    build/sox-14.4.1/src/effects.h
    build/sox-14.4.1/src/effects_i.c
    build/sox-14.4.1/src/effects_i_dsp.c
    build/sox-14.4.1/src/example0.c
    build/sox-14.4.1/src/example1.c
    build/sox-14.4.1/src/example2.c
    build/sox-14.4.1/src/example3.c
    build/sox-14.4.1/src/example4.c
    build/sox-14.4.1/src/example5.c
    build/sox-14.4.1/src/f4-fmt.c
    build/sox-14.4.1/src/f8-fmt.c
    build/sox-14.4.1/src/fade.c
    build/sox-14.4.1/src/fap.c
    build/sox-14.4.1/src/ffmpeg.c
    build/sox-14.4.1/src/ffmpeg.h
    build/sox-14.4.1/src/fft4g.c
    build/sox-14.4.1/src/fft4g.h
    build/sox-14.4.1/src/fifo.h
    build/sox-14.4.1/src/fir.c
    build/sox-14.4.1/src/firfit.c
    build/sox-14.4.1/src/flac.c
    build/sox-14.4.1/src/flanger.c
    build/sox-14.4.1/src/formats.c
    build/sox-14.4.1/src/formats.h
    build/sox-14.4.1/src/formats_i.c
    build/sox-14.4.1/src/g711.c
    build/sox-14.4.1/src/g711.h
    build/sox-14.4.1/src/g721.c
    build/sox-14.4.1/src/g723_24.c
    build/sox-14.4.1/src/g723_40.c
    build/sox-14.4.1/src/g72x.c
    build/sox-14.4.1/src/g72x.h
    build/sox-14.4.1/src/gain.c
    build/sox-14.4.1/src/getopt.c
    build/sox-14.4.1/src/gsm.c
    build/sox-14.4.1/src/gsrt.c
    build/sox-14.4.1/src/hcom.c
    build/sox-14.4.1/src/hilbert.c
    build/sox-14.4.1/src/htk.c
    build/sox-14.4.1/src/ignore-warning.h
    build/sox-14.4.1/src/ima-fmt.c
    build/sox-14.4.1/src/ima_rw.c
    build/sox-14.4.1/src/ima_rw.h
    build/sox-14.4.1/src/input.c
    build/sox-14.4.1/src/la-fmt.c
    build/sox-14.4.1/src/ladspa.c
    build/sox-14.4.1/src/ladspa.h
    build/sox-14.4.1/src/libsox.c
    build/sox-14.4.1/src/libsox_i.c
    build/sox-14.4.1/src/loudness.c
    build/sox-14.4.1/src/lpc10.c
    build/sox-14.4.1/src/lu-fmt.c
    build/sox-14.4.1/src/mat4.c
    build/sox-14.4.1/src/mat5.c
    build/sox-14.4.1/src/maud.c
    build/sox-14.4.1/src/mcompand.c
    build/sox-14.4.1/src/mcompand_xover.h
    build/sox-14.4.1/src/mixer.c
    build/sox-14.4.1/src/mp3-util.h
    build/sox-14.4.1/src/mp3.c
    build/sox-14.4.1/src/noiseprof.c
    build/sox-14.4.1/src/noisered.c
    build/sox-14.4.1/src/noisered.h
    build/sox-14.4.1/src/nulfile.c
    build/sox-14.4.1/src/oss.c
    build/sox-14.4.1/src/output.c
    build/sox-14.4.1/src/overdrive.c
    build/sox-14.4.1/src/pad.c
    build/sox-14.4.1/src/paf.c
    build/sox-14.4.1/src/phaser.c
    build/sox-14.4.1/src/prc.c
    build/sox-14.4.1/src/pulseaudio.c
    build/sox-14.4.1/src/pvf.c
    build/sox-14.4.1/src/rate.c
    build/sox-14.4.1/src/rate_filters.h
    build/sox-14.4.1/src/rate_half_fir.h
    build/sox-14.4.1/src/rate_poly_fir.h
    build/sox-14.4.1/src/rate_poly_fir0.h
    build/sox-14.4.1/src/raw-fmt.c
    build/sox-14.4.1/src/raw.c
    build/sox-14.4.1/src/raw.h
    build/sox-14.4.1/src/remix.c
    build/sox-14.4.1/src/repeat.c
    build/sox-14.4.1/src/reverb.c
    build/sox-14.4.1/src/reverse.c
    build/sox-14.4.1/src/s1-fmt.c
    build/sox-14.4.1/src/s2-fmt.c
    build/sox-14.4.1/src/s3-fmt.c
    build/sox-14.4.1/src/s4-fmt.c
    build/sox-14.4.1/src/sd2.c
    build/sox-14.4.1/src/sf.c
    build/sox-14.4.1/src/silence.c
    build/sox-14.4.1/src/sinc.c
    build/sox-14.4.1/src/skeleff.c
    build/sox-14.4.1/src/skelform.c
    build/sox-14.4.1/src/smp.c
    build/sox-14.4.1/src/sndfile.c
    build/sox-14.4.1/src/sndio.c
    build/sox-14.4.1/src/sounder.c
    build/sox-14.4.1/src/soundtool.c
    build/sox-14.4.1/src/sox-fmt.c
    build/sox-14.4.1/src/sox.c
    build/sox-14.4.1/src/sox.h
    build/sox-14.4.1/src/sox_i.h
    build/sox-14.4.1/src/sox_sample_test.c
    build/sox-14.4.1/src/sox_sample_test.h
    build/sox-14.4.1/src/soxconfig.h
    build/sox-14.4.1/src/soxomp.h
    build/sox-14.4.1/src/spectrogram.c
    build/sox-14.4.1/src/speed.c
    build/sox-14.4.1/src/sphere.c
    build/sox-14.4.1/src/splice.c
    build/sox-14.4.1/src/stat.c
    build/sox-14.4.1/src/stats.c
    build/sox-14.4.1/src/stretch.c
    build/sox-14.4.1/src/sunaudio.c
    build/sox-14.4.1/src/swap.c
    build/sox-14.4.1/src/synth.c
    build/sox-14.4.1/src/tempo.c
    build/sox-14.4.1/src/tremolo.c
    build/sox-14.4.1/src/trim.c
    build/sox-14.4.1/src/tx16w.c
    build/sox-14.4.1/src/u1-fmt.c
    build/sox-14.4.1/src/u2-fmt.c
    build/sox-14.4.1/src/u3-fmt.c
    build/sox-14.4.1/src/u4-fmt.c
    build/sox-14.4.1/src/ul-fmt.c
    build/sox-14.4.1/src/upsample.c
    build/sox-14.4.1/src/util.c
    build/sox-14.4.1/src/util.h
    build/sox-14.4.1/src/vad.c
    build/sox-14.4.1/src/voc.c
    build/sox-14.4.1/src/vol.c
    build/sox-14.4.1/src/vorbis.c
    build/sox-14.4.1/src/vox-fmt.c
    build/sox-14.4.1/src/vox.c
    build/sox-14.4.1/src/vox.h
    build/sox-14.4.1/src/w64.c
    build/sox-14.4.1/src/wav.c
    build/sox-14.4.1/src/waveaudio.c
    build/sox-14.4.1/src/wavpack.c
    build/sox-14.4.1/src/win32-glob.c
    build/sox-14.4.1/src/win32-glob.h
    build/sox-14.4.1/src/win32-ltdl.c
    build/sox-14.4.1/src/win32-ltdl.h
    build/sox-14.4.1/src/wve.c
    build/sox-14.4.1/src/xa.c
    build/sox-14.4.1/src/xi.c
    build/sox-14.4.1/src/xmalloc.c
    build/sox-14.4.1/src/xmalloc.h
    local/include/lame/lame.h
    local/include/sox.h)

add_executable(hpce_2014_cw2 ${SOURCE_FILES})